<resources>
    <string name="app_name">My Application</string>
    <string name="name">Name</string>
    <string name="mac">MAC</string>
    <string name="distance">Distance</string>

    <!--Title-->
    <string name="title_beacon">Beacon</string>
    <string name="title_contact">Contact</string>
    <string name="title_manage_beacon">Manage Beacon</string>
    <string name="title_setting">Setting</string>
    <!--Title-->
    <string name="mqtt_setting">MQTT Setting</string>
    <string name="mqtt_not_connected">Not Conntected</string>
    <string name="mqtt_failed">Unsuccessful</string>
    <string name="mqtt_connecting">Connecting</string>
    <string name="mqtt_connected">Connected</string>
    <string name="mqtt_topic">Topic</string>
    <string name="mqtt_host">Host IP</string>
    <string name="mqtt_username">Username</string>
    <string name="mqtt_password">Password</string>
    <string name="login">Login</string>
    <string name="update">Update</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
